# MetaMatch

./: .gitignore  Makefile  README.md  pyproject.toml
Experimentation/RQ1_Effectiveness/: effectiveness.ipynb  f1_prec_recall_per_cls_model.csv  f1_prec_recall_per_cls_model_cat.csv
Experimentation/RQ2_Effeciency/: Effeciency.ipynb
Experimentation/RQ2_Effeciency/timings/: ada_embeddings_timings.csv  albert_embeddings_timings.csv  bart_embeddings_timings.csv  bert_embeddings_timings.csv  distilbert_embeddings_timings.csv  minilm_embeddings_timings.csv
Experimentation/RQ2_Effeciency/timings/.ipynb_checkpoints/: roberta_embeddings_timings-checkpoint.csv
Experimentation/RQ3_Feature_importance/: FeatureImportance.ipynb
Experimentation/RQ3_Feature_importance/albert/: feature_importance.csv
Experimentation/RQ3_Feature_importance/bart/: feature_importance.csv
Experimentation/RQ3_Feature_importance/bert/: feature_importance.csv
Experimentation/RQ3_Feature_importance/distilbert/.ipynb_checkpoints/: feature_importance-checkpoint.csv
Experimentation/RQ3_Feature_importance/minilm/: feature_importance.csv
Experimentation/RQ3_Feature_importance/roberta/: feature_importance.csv
Experimentation/RQ4_Feature_Selection/: 58_mt_effectiveness.csv  58_mt_effectiveness_by_cat.csv  feature_selection.ipynb  features_all_models.json
Experimentation/RQ5_Baseline/: baseline.csv  baseline.ipynb
MetaMatch/src/Meta_learner/: train.py
MetaMatch/src/meta_space/: create_meta_space_per_dataset.py  embed_utils.py  golden_cli.py  golden_tools.py  pipeline.py
MetaMatch/src/meta_space/meta_features/: classical_distances.py  spectral_features.py  syntax_string_features.py  topology_features.py  utils.py
MetaMatch/tests/results_meta_learner/: metrics_global.csv  metrics_per_category.csv  model__CatBoost.joblib  predictions__CatBoost.csv
MetaMatch/tests/results_meta_space/: Meta_Space__amazon_google_exp__all-MiniLM-L6-v2.csv  inter_amazon_google_exp__amazon_google_exp_source__amazon_google_exp_target__all-MiniLM-L6-v2.csv  inter_amazon_google_exp__src→tgt__amazon_google_exp_source__amazon_google_exp_target__all-MiniLM-L6-v2.csv
(+1 files in other folders)
