[tool.poetry]
name = "schema-instance"
version = "0.1.0"
description = ""
authors = ["user28060 <dbibi.toto@ofjf.com>"]
readme = "README.md"

packages = [
  { include = "meta_space",   from = "MetaMatch/src" },
  { include = "Meta_learner", from = "MetaMatch/src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

numpy = "1.24.4"
scipy = "1.10.1"
torch = "2.2.2"
torchvision = "0.17.2"
pandas = "1.5.3"
matplotlib = ">=3.7,<4.0"
ripser = ">=0.6.12,<0.7.0"
persim = ">=0.3.8,<0.4.0"
gudhi = ">=3.11.0,<4.0.0"
sentence-transformers = ">=3,<4"
transformers = ">=4.57,<5"
huggingface-hub = ">=0.20,<1.0"
sentencepiece = ">=0.2.1,<0.3.0"
nltk = ">=3.9,<4"
xgboost = ">=2,<3"
catboost = ">=1.2,<2"
POT = "^0.9.6.post1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
autoflake = "^2.3.1"
isort = "^5.13.2"
black = "^24.10.0"
mdformat = "^0.7.21"
flake8 = "^7.1.1"

[tool.poetry.scripts]
MetaMatch = "meta_space.pipeline:meta_match"
MetaLearn = "Meta_learner.train:meta_learn"

[build-system]
requires = ["poetry-core>=1.8.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
